--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   bloc_test: ^9.1.7
@@ -28,6 +29,8 @@ flutter:
   fonts:
     - family: Futura
       fonts:
-        - asset: assets/fonts/futura/Futura-Book.ttf
         - asset: assets/fonts/futura/Futura-Light.ttf
         - asset: assets/fonts/futura/Futura.ttf
+    - family: FuturaBook
+      fonts:
+        - asset: assets/fonts/futura/Futura-Book.ttf
